Implement endpoint to get high score values
TG-126 #closed
