# open-api-specification.yaml
@@ -132,6 +132,36 @@ paths:
         404:
           description: Game not found
 
+  /highscores:
+    get:
+      summary: Get the best results for every game
+      tags: ['Highscores']
+      responses:
+        200:
+          description: Successful opeation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  gameKey:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Highscore'
+    post:
+      summary: Sets a rating for the actual player for that game
+      tags: ['Games']
+      parameters:
+        - name: gameKey
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Successful opeation
+        404:
+          description: Game not found
   /matches:
     get:
       summary: Get list of matches
@@ -478,6 +508,25 @@ components:
         icon:
           type: string
         rating:
+          type: number
+    Highscore:
+      type: object
+      required:
+        - _id
+        - gameKey
+        - match
+        - user
+        - score
+      properties:
+        _id:
+          type: string
+        gameKey:
+          type: string
+        match:
+          type: string
+        user:
+          type: string
+        score:
           type: number
     Match:
       allOf:
